Add functionality for checking PR merge status

--- a/plugin.yml
+++ b/plugin.yml
@@ -24,6 +24,8 @@ configuration:
       type: string
     pull-request-message:
       type: string
+    pull-request-wait-for-merge:
+      type: boolean
     user:
       type: object
       properties:
