--- a/plugin.yml
+++ b/plugin.yml
@@ -26,6 +26,8 @@ configuration:
       type: string
     pull-request-wait-for-merge:
       type: boolean
+    pull-request-wait-for-merge-timeout-mins:
+      type: string
     user:
       type: object
       properties:
