--- a/plugin.yml
+++ b/plugin.yml
@@ -24,6 +24,8 @@ configuration:
       type: string
     pull-request-message:
       type: string
+    pull-request-base-branch:
+      type: string
     pull-request-wait-for-merge:
       type: boolean
     pull-request-wait-for-merge-timeout-mins:
